<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="eventListener"
      type="app.te.protein_chef.presentation.additions_meals.event_listener.AdditionalEventListener" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/menu_title"
      style="@style/TextBoldFont"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dimen16"
      android:text="@string/additions_dialog_title"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/menu_body"
      style="@style/TextRegularFont"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dimen16"
      android:text="@string/additions_dialog_body"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@color/darkGray"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/menu_title" />


    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_continue"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dimen6"
      android:layout_marginTop="@dimen/dimen16"
      android:layout_marginEnd="@dimen/dimen16"
      android:onClick="@{()-> eventListener.openPrivacy()}"
      android:padding="@dimen/dimen10"
      android:text="@string/continue_order"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@color/white"
      app:backgroundTint="@color/colorPrimaryDark"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/btn_add"
      app:layout_constraintTop_toBottomOf="@id/menu_body" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_add"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dimen16"
      android:layout_marginTop="@dimen/dimen16"
      android:onClick="@{()-> eventListener.openAdditional()}"
      android:padding="@dimen/dimen10"
      android:text="@string/add_additions"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@color/white"
      app:backgroundTint="@color/colorAccentDark"
      app:layout_constraintEnd_toStartOf="@+id/btn_continue"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/menu_body" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>