<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="app.grand.tafwak.presentation.base.utils.Constants" />

    <variable
      name="eventListener"
      type="app.grand.tafwak.presentation.auth.forgot_password.ForgetPasswordEventListener" />

    <variable
      name="request"
      type="app.grand.tafwak.domain.auth.entity.request.ForgetPasswordRequest" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_login_logo"
        android:layout_width="@dimen/dimen150"
        android:layout_height="@dimen/dimen150"
        android:layout_marginTop="@dimen/dimen40"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/TextBoldFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen36"
        android:layout_marginTop="@dimen/dimen40"
        android:layout_marginEnd="@dimen/dimen36"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login_logo" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_confirm_header"
        style="@style/TextMediumFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen36"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen36"
        android:text="@string/forgot_header"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black_op"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen14"
        android:layout_marginTop="@dimen/dimen40"
        android:layout_marginEnd="@dimen/dimen14"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/register_phone"
        android:textColorHint="@color/colorDarkGray"
        app:helperTextTextColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_header"
        app:startIconDrawable="@drawable/ic_call"
        app:startIconTint="@color/colorPrimaryDark">

        <androidx.appcompat.widget.AppCompatEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:text="@={request.phone}"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="@color/colorPrimaryDark"
          android:textColorHint="@color/colorDarkGray" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/appCompatButtonNext"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_marginTop="@dimen/dimen24"
        android:layout_marginEnd="@dimen/dimen12"
        android:onClick="@{()-> eventListener.sendCode()}"
        android:padding="@dimen/dimen10"
        android:text="@string/send"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorAccentDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_phone" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_remember"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_marginTop="@dimen/dimen14"
        android:layout_marginEnd="@dimen/dimen12"
        android:layout_marginBottom="@dimen/dimen24"
        android:onClick="@{()-> eventListener.back()}"
        android:padding="@dimen/dimen10"
        android:text="@string/remember_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appCompatButtonNext" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>